k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: mern-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mern-backend
  template:
    metadata:
      labels:
        app: mern-backend
    spec:
      containers:
      - name: mern-backend
        image: mern-social-g47-secdevops-mern-backend:latest
        imagePullPolicy: Never  # Use local image
        ports:
        - containerPort: 3000
