k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mern-backend
spec:
  selector:
    app: mern-backend
  ports:
  - port: 3000
    targetPort: 3000
  type: ClusterIP
