k8s/mongo-express-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
spec:
  selector:
    app: mongo-express
  ports:
  - port: 8081
    targetPort: 8081
  type: ClusterIP
