k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mern-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - mern-app.local
    secretName: mern-tls-secret
  rules:
  - host: mern-app.local
    http:
      paths:
      - path: /signin
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 443
      - path: /mongo-express
        pathType: Prefix
        backend:
          service:
            name: mongo-express-service
            port:
              number: 8081
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: mern-backend
            port:
              number: 3000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 443
